fixed spacing and formatting issues on article, article list, header, button, nav, navcss, btn css, and main

--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,34 +1,33 @@
-
 #connected-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 0 1.25rem;
-    max-height: calc(100vh -55x);
-    overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 1.25rem;
+  max-height: calc(100vh - 55px);
+  overflow: auto;
 }
 
-div.card.blue-grey.lighten-3{
-    cursor: pointer;
-    max-width: 10rem;
-    height: 13.5rem;
-    padding: .25rem .75rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: .5rem;
+div.card.blue-grey.lighten-3 {
+  cursor: pointer;
+  max-width: 10rem;
+  height: 13.5rem;
+  padding: 0.25rem 0.75rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0.5rem;
 }
 p.article-headline {
-    text-align: left;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 400;
-    font-size: .9rem;
+  text-align: left;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 400;
+  font-size: 0.9rem;
 }
 
 div.card-bottom {
-    text-align: left;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 400;
-    font-size: .9rem;
-    color: #212121;
+  text-align: left;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 400;
+  font-size: 0.9rem;
+  color: #212121;
 }
