--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,20 +1,19 @@
-
-#the-header-div{
- padding: .2rem;
- border-bottom: 1px solid rgba(0,0,0,0.14)
+#the-header-div {
+  padding: 0.2rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
 #the-header {
-    color: #424242;
-    font-size: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+  color: #424242;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
-#hn-h1{
-    font-size: 2rem;
-    text-align: left;
-    padding: .25rem .5rem;
-    border: 1px solid #222;
-    margin-left: 1rem;
+#hn-h1 {
+  font-size: 2rem;
+  text-align: left;
+  padding: 0.25rem 0.5rem;
+  border: 1px solid #222;
+  margin-left: 1rem;
 }
